added about & rules modal

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -4,3 +4,12 @@
   align-items: center;
   height: 100vh;
 }
+
+v-height {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+
