Add a new branch and create input fields to create a team

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -12,3 +12,13 @@
   justify-content: center;
   align-items: center;
 }
+
+.startPageTop {
+  background-color: #F5B041;
+  height: 40vh;
+}
+
+.startPageBottom {
+  background-color:;
+  height: 60vh;
+}
