--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -19,6 +19,8 @@
 }
 
 .startPageBottom {
-  background-color:;
+  background-image: url("../IMG/map.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 60vh;
 }
