--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -1,15 +1,3 @@
-body
-{
-  margin: 0;
-  padding: 0;
-  width: 100vh; 
-  height: 100vh;
-  
-  /* make it look decent enough */
-  background: #232323;
-  color: #cdcdcd;
-  font-family: "Avenir Next", "Avenir", sans-serif;
-}
 
 a
 {
@@ -27,18 +15,25 @@ a:hover
 #menuToggle
 {
   display: block;
-  position: relative;
+  position: absolute;
   top: 50px;
-  left: 50px;
-  width: 100vh;
-  height: 100vh;
-  
+  left: 50px;  
   z-index: 1;
-  
   -webkit-user-select: none;
   user-select: none;
 }
-
+@media screen and (max-width: 480px) {
+#menuToggle
+{
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 11px;  
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+}
 #menuToggle input
 {
   display: block;
@@ -46,13 +41,10 @@ a:hover
   height: 32px;
   position: absolute;
   top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
+  left: -5px;  
+  cursor: pointer; 
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
-  
   -webkit-touch-callout: none;
 }
 
@@ -65,15 +57,11 @@ a:hover
   width: 35px;
   height: 4px;
   margin-bottom: 5px;
-  position: relative;
-  
-  background: #cdcdcd;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
+  position: relative; 
+  background:white;
+  border-radius: 3px; 
+  z-index: 1; 
   transform-origin: 4px 0px;
-  
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               opacity 0.55s ease;
@@ -124,12 +112,14 @@ a:hover
 #menu
 {
   position: absolute;
-  width: 100vh;
+  width: 75vh;
   height: 100vh;
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  
+   margin-top: 0;
+    margin-bottom: 0;
+  top:-50px;
   background: #ededed;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
