--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -14,7 +14,21 @@
 }
 
 .startPageTop {
-  background-color: #F5B041;
+background: #000046;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #000046, #1CB5E0 );  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left,#000046, #1CB5E0 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+.btn-success:hover {
+    color: white;
+    background-color: #1CB5E0;
+    border-color: transparent;
+}
+
+.btn-success {
+    color: white;
+    background-color: transparent;
+    border:2px solid white;
 }
 
 .startPageBottom {
@@ -28,4 +42,9 @@
 .input-group-append .btn, .input-group-prepend .btn {
   position: relative;
   z-index: 0;
+}
+
+h2{
+	color:white;
+
 }
