--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,6 +1,15 @@
+body {
+background: #000046;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #000046, #1CB5E0 );  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left,#000046, #1CB5E0 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+
 .bg-color{
   background-color: #F5B041  ;
 }
+
 .v-height {
   display: flex;
   justify-content: center;
@@ -44,7 +53,7 @@ background: linear-gradient(to left,#000046, #1CB5E0 ); /* W3C, IE 10+/ Edge, Fi
   z-index: 0;
 }
 
-h2{
+h2,h3{
 	color:white;
 
 }
