--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -74,7 +74,7 @@ h2,h3{
 }
 
 .nav-tabs .nav-link {
-  border: 1px solid #dee2e6;
+  border: 1px solid transparent;
 }
 
 .nav-link:hover {
@@ -87,4 +87,7 @@ h2,h3{
 
 .red {
   color: red;
+}
+.nav-tabs {
+    border-bottom: 1px solid transparent;
 }
