fixed link to quit button

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -61,8 +61,11 @@ h2,h3{
 	position:absolute;
 	right:10px;
 	top:35px;
-	
-	
+}
+
+.pull-right a {
+  text-decoration: none;
+  color: #fff;
 }
 
 @media screen and (max-width: 480px) {
