--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -7,7 +7,7 @@ background: linear-gradient(to left,#000046, #1CB5E0 ); /* W3C, IE 10+/ Edge, Fi
 
 
 .bg-color{
-  background-color: #F5B041  ;
+  background-color:white;
 }
 
 .v-height {
@@ -96,4 +96,8 @@ h2,h3{
 }
 .nav-tabs a {
 color:white
+}
+/* -- Vanlig muspekare om man håller på teams -- */
+.list-group-item  {
+   cursor:default
 }
