--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -119,3 +119,16 @@ color:white
 	margin-bottom:49px;
 }
 }
+/* Vinster och förluster icon center*/	
+#score svg:not(:root).svg-inline--fa {
+    overflow: visible;
+    position: absolute;
+    left: 49%;
+	top:50%;
+}
+/* Profil leaderboard icon */
+.player svg:not(:root).svg-inline--fa {
+    overflow: visible;
+	-webkit-filter: invert(100%);
+}
+
