fixing leaderboard profile

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -124,11 +124,37 @@ color:white
     overflow: visible;
     position: absolute;
     left: 49%;
-	top:50%;
+    top:50%;
 }
 /* Profil leaderboard icon */
 .player svg:not(:root).svg-inline--fa {
     overflow: visible;
-	-webkit-filter: invert(100%);
+    color: #fff;
+    width: 100px;
+    height: 100px;
 }
 
+.scoreToggle{
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  color: #000;
+  background-color: #ccc;
+}
+
+.rankToggle {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #ccc;
+}
+
+.nav-pills .nav-link.active {
+  background-color: #fff;
+  color: #000;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid #fff;
+}
