--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -132,7 +132,7 @@ color:white
     left: 49%;
     top: 35%;
 }
-/* Profil leaderboard icon */
+/* Profil leaderboard ikon */
 .player svg:not(:root).svg-inline--fa {
     overflow: visible;
     color: #fff;
@@ -163,4 +163,9 @@ hr {
   margin-bottom: 1rem;
   border: 0;
   border-top: 1px solid #fff;
+}
+.white-border select:not(:last-child), .input-group .form-control:not(:last-child) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+	border-color:white;
 }
