--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -169,3 +169,25 @@ hr {
     border-bottom-right-radius: 0;
 	border-color:white;
 }
+
+@media screen and (max-width: 480px) {
+.modal-content {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 90%;
+	left:3%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .3rem;
+    outline: 0;
+}
+}
+
