--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -53,11 +53,9 @@ background: linear-gradient(to top,#0f59ff, #1CB5E0 ); /* W3C, IE 10+/ Edge, Fir
 }
 
 
-.startPageBottom {
-  background-image: url("../IMG/map.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+#startPageBottom {
   height: 62vh;
+  width: 100%;
 }
 
 /*För att dölja create button när man klickar på menyn*/
