--- a/googlemaps/css.css
+++ b/googlemaps/css.css
@@ -12,12 +12,7 @@ body {
 }
 
 
-#map {
-    height: 91.3%;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 
       #hide-listings,
@@ -27,7 +22,7 @@ body {
 
       #map {
         bottom:0px;
-        height: 100%;
+        height: 94%;
         left: 0px;
         position: relative;
         right: 0px;
@@ -56,6 +51,7 @@ body {
 h4 {
   margin-top: 0;
 }
+
 
 .btn {
   width: calc(50% - 20px);
@@ -86,16 +82,7 @@ h4 {
  outline:none;
 
 }	
-.wrong-answer{ 
-  background:	red !important;
-  border: solid 2px red!important;
-  outline: none;
-}
-.right-answer{ 
-  background:	#7FFF00 !important;
-  border: solid 2px #7FFF00 !important;
-  outline: none;
-}
+
 .button1 {
      width: calc(50% - 20px);
 	 color:white;
@@ -128,6 +115,18 @@ h4 {
     -webkit-tap-highlight-color: transparent;
 	outline: none;
 }
+
+.wrong-answer{ 
+  background:	red !important;
+  border: solid 2px red!important;
+  outline: none;
+}
+.right-answer{ 
+  background:	#7FFF00 !important;
+  border: solid 2px #7FFF00 !important;
+  outline: none;
+}
+
 .modal-content {
   position: relative;
 background: #000046;  /* fallback for old browsers */
@@ -142,6 +141,28 @@ background: linear-gradient(to top,#0f59ff, #1CB5E0 ); /* W3C, IE 10+/ Edge, Fir
     -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
     box-shadow: 0 3px 9px rgba(0,0,0,.5);
 	color:white;
+}
+
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+.modal-content {
+  position: relative;
+background: #000046;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #0f59ff, #1CB5E0 );  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top,#0f59ff, #1CB5E0 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+	color:white;
+	width:900px;
+	top:500px;
+	right:150px;
+	
+}
 }
 .modal-footer {
     padding: 15px;
@@ -158,40 +179,111 @@ color:white !important;
 
 }
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:800);
-
-.countdown {
-  margin: 0 auto;
-  font-size:60px;
-  position:relative;
-      transform: scale(0.3);
-	  font-size:100px;
-	  width:0px;
-	  height:0px;
-	  border:1px solid red;
-	  top:-25px;
-	  right:67px;
+#count {
+	font-size:30px;
+	position:relative;	
+}
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+#count {
+	font-size:60px;
+	position:relative;	
+	left:-12px;
+}
+}
+#checkpoints{
+	color:white;
 }
 
-.path--background {
-  fill: transparent;
-  stroke: #fff;
-  stroke-width: 0px;
+.correct_answers {
+	position:absolute;
+	font-size:20px;
+	color:#fff;
+	bottom:20px;
+	left:10px;
+	font-family: "Times New Roman", Times, serif;
+}
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+.correct_answers {
+	position:absolute;
+	font-size:40px;
+	color:#fff;
+	bottom:20px;
+	left:60px;
+	font-family: "Times New Roman", Times, serif;
 }
 
-.pulse {
-  fill: red !important;
+}
+output#counter{
+	position:absolute;
+	font-size:20px;
+	color:#FFFF;
+	bottom:30px;
+	left:0px;
+	font-family: "Times New Roman", Times, serif;
+}
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+output#counter{
+	position:absolute;
+	font-size:40px;
+	color:#FFFF;
+	bottom:30px;
+	left:35px;
+	font-family: "Times New Roman", Times, serif;
+}
+}
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+.knapp {
+	position:relative;
+	height:100px;
+	font-size:20px;
+	top:-2px;
+	
+	
+}
+}
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+#myButton{
+	font-size:40px;
+	
+}
 }
 
-.path--foreground {
-  fill: #eee;
-  stroke: #eee;
-  stroke-width: 2px;
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+.button1 {
+     width: calc(50% - 20px);
+	 color:white;
+    margin: 5px;
+	background:transparent;
+    border: solid 2px white;
+    border-radius: 2px;
+    display: inline-block;
+    height: 36px;
+    line-height: 36px;
+    padding: 0 2rem;
+	font-size:16px;
+    vertical-align: middle;
+    -webkit-tap-highlight-color: transparent;
+	outline: none;
+		height:100px;
+		font-size:30px;
 }
-
-.label {
-  font: 90px "Open Sans";
-  font-weight: 900;
-  text-anchor: middle;
-  fill: rgb(255, 255, 255);
+.button12 {
+     width: calc(50% - 20px);
+	 color:white;
+    margin: 5px;
+	background:transparent;
+    border: solid 2px white;
+    border-radius: 2px;
+    display: inline-block;
+    height: 36px;
+    line-height: 36px;
+    padding: 0 2rem;
+	font-size:16px;
+    vertical-align: middle;
+    -webkit-tap-highlight-color: transparent;
+	outline: none;
+	height:100px;
+	font-size:30px;
+	
+}
 }
