--- a/googlemaps/css.css
+++ b/googlemaps/css.css
@@ -39,7 +39,7 @@ body {
         text-align: left;
         width: 340px;
       }
-	  
+
   #quiz {
   position:relative;
   top:-50px;
@@ -81,7 +81,7 @@ h4 {
 .btn:focus {
  outline:none;
 
-}	
+}
 
 .button1 {
      width: calc(50% - 20px);
@@ -116,12 +116,12 @@ h4 {
 	outline: none;
 }
 
-.wrong-answer{ 
+.wrong-answer{
   background:	red !important;
   border: solid 2px red!important;
   outline: none;
 }
-.right-answer{ 
+.right-answer{
   background:	#7FFF00 !important;
   border: solid 2px #7FFF00 !important;
   outline: none;
@@ -161,7 +161,7 @@ background: linear-gradient(to top,#0f59ff, #1CB5E0 ); /* W3C, IE 10+/ Edge, Fir
 	width:900px;
 	top:500px;
 	right:150px;
-	
+
 }
 }
 .modal-footer {
@@ -181,19 +181,18 @@ color:white !important;
 
 #count {
 	font-size:30px;
-	position:relative;	
+	position:relative;
 }
 @media screen and (max-width: 1000px) and (min-width: 700px) {
 #count {
 	font-size:60px;
-	position:relative;	
+	position:relative;
 	left:-12px;
 }
 }
 #checkpoints{
 	color:white;
 }
-
 .correct_answers {
 	position:absolute;
 	font-size:20px;
@@ -211,7 +210,12 @@ color:white !important;
 	left:60px;
 	font-family: "Times New Roman", Times, serif;
 }
-
+.app{
+  justify-content: center;
+}
+.app img {
+  width: 50vw;
+}
 }
 output#counter{
 	position:absolute;
@@ -221,7 +225,6 @@ output#counter{
 	left:0px;
 	font-family: "Times New Roman", Times, serif;
 }
-
 @media screen and (max-width: 1000px) and (min-width: 700px) {
 output#counter{
 	position:absolute;
@@ -231,6 +234,7 @@ output#counter{
 	left:35px;
 	font-family: "Times New Roman", Times, serif;
 }
+.
 }
 @media screen and (max-width: 1000px) and (min-width: 700px) {
 .knapp {
@@ -238,14 +242,14 @@ output#counter{
 	height:100px;
 	font-size:20px;
 	top:-2px;
-	
-	
+
+
 }
 }
 @media screen and (max-width: 1000px) and (min-width: 700px) {
 #myButton{
 	font-size:40px;
-	
+
 }
 }
 
@@ -285,34 +289,6 @@ output#counter{
 	outline: none;
 	height:100px;
 	font-size:30px;
-	
-}
-}
 
-
-.correct_answerss {
-    position: relative;
-    bottom: 282px;
-  
-    font-size: 200px;
-    color: white;
-    font-family: "Times New Roman", Times, serif;
 }
-
-output#rett{
-	position:relative;
-      color: white;
-    z-index: 30;
-    font-size: 200px;
-   right:120px;
-    font-family: "Times New Roman", Times, serif;
-     
-}
-
-#border {
-	position:relative;
-	 left:41px;
-	top:-30px;
-	width:300px;
-	height:363px;
 }
